--- a/packages/lib/translations/de/web.po
+++ b/packages/lib/translations/de/web.po
@@ -63,6 +63,23 @@ msgstr "(Du)"
 
 #. placeholder {0}: Math.abs(charactersRemaining)
 #: apps/remix/app/components/general/document-signing/document-signing-text-field.tsx
+#: apps/web/src/components/(teams)/forms/update-team-form.tsx:241
+msgid "\"{teamUrl}\" has invited you to sign \"example document\"."
+msgstr "\"{teamUrl}\" hat Sie eingeladen, \"Beispieldokument\" zu unterschreiben."
+
+#: apps/web/src/app/(signing)/sign/[token]/signing-page-view.tsx:80
+msgid "({0}) has invited you to approve this document"
+msgstr "({0}) hat dich eingeladen, dieses Dokument zu genehmigen"
+
+#: apps/web/src/app/(signing)/sign/[token]/signing-page-view.tsx:77
+msgid "({0}) has invited you to sign this document"
+msgstr "({0}) hat dich eingeladen, dieses Dokument zu unterzeichnen"
+
+#: apps/web/src/app/(signing)/sign/[token]/signing-page-view.tsx:74
+msgid "({0}) has invited you to view this document"
+msgstr "({0}) hat dich eingeladen, dieses Dokument zu betrachten"
+
+#: apps/web/src/app/(signing)/sign/[token]/text-field.tsx:311
 msgid "{0, plural, one {(1 character over)} other {(# characters over)}}"
 msgstr "{0, plural, one {(1 Zeichen über dem Limit)} other {(# Zeichen über dem Limit)}}"
 
