--- a/packages/lib/translations/en/web.po
+++ b/packages/lib/translations/en/web.po
@@ -58,6 +58,23 @@ msgstr "(You)"
 
 #. placeholder {0}: Math.abs(charactersRemaining)
 #: apps/remix/app/components/general/document-signing/document-signing-text-field.tsx
+#: apps/web/src/components/(teams)/forms/update-team-form.tsx:241
+msgid "\"{teamUrl}\" has invited you to sign \"example document\"."
+msgstr "\"{teamUrl}\" has invited you to sign \"example document\"."
+
+#: apps/web/src/app/(signing)/sign/[token]/signing-page-view.tsx:80
+msgid "({0}) has invited you to approve this document"
+msgstr "({0}) has invited you to approve this document"
+
+#: apps/web/src/app/(signing)/sign/[token]/signing-page-view.tsx:77
+msgid "({0}) has invited you to sign this document"
+msgstr "({0}) has invited you to sign this document"
+
+#: apps/web/src/app/(signing)/sign/[token]/signing-page-view.tsx:74
+msgid "({0}) has invited you to view this document"
+msgstr "({0}) has invited you to view this document"
+
+#: apps/web/src/app/(signing)/sign/[token]/text-field.tsx:311
 msgid "{0, plural, one {(1 character over)} other {(# characters over)}}"
 msgstr "{0, plural, one {(1 character over)} other {(# characters over)}}"
 
