--- a/packages/lib/translations/fr/web.po
+++ b/packages/lib/translations/fr/web.po
@@ -63,6 +63,23 @@ msgstr "(Vous)"
 
 #. placeholder {0}: Math.abs(charactersRemaining)
 #: apps/remix/app/components/general/document-signing/document-signing-text-field.tsx
+#: apps/web/src/components/(teams)/forms/update-team-form.tsx:241
+msgid "\"{teamUrl}\" has invited you to sign \"example document\"."
+msgstr "\"{teamUrl}\" vous a invité à signer \"example document\"."
+
+#: apps/web/src/app/(signing)/sign/[token]/signing-page-view.tsx:80
+msgid "({0}) has invited you to approve this document"
+msgstr "({0}) vous a invité à approuver ce document"
+
+#: apps/web/src/app/(signing)/sign/[token]/signing-page-view.tsx:77
+msgid "({0}) has invited you to sign this document"
+msgstr "({0}) vous a invité à signer ce document"
+
+#: apps/web/src/app/(signing)/sign/[token]/signing-page-view.tsx:74
+msgid "({0}) has invited you to view this document"
+msgstr "({0}) vous a invité à consulter ce document"
+
+#: apps/web/src/app/(signing)/sign/[token]/text-field.tsx:311
 msgid "{0, plural, one {(1 character over)} other {(# characters over)}}"
 msgstr "{0, plural, one {(1 caractère de trop)} other {(# caractères de trop)}}"
 
