--- a/apps/documentation/pages/users/documents/sending-documents.mdx
+++ b/apps/documentation/pages/users/documents/sending-documents.mdx
@@ -115,7 +115,7 @@ All fields can be placed anywhere on the document and resized as needed.
 
 <Callout type="info">
   Learn more about the available field types and how to use them on the [Fields
-  page](signing-documents/fields).
+  page](/users/documents/fields).
 </Callout>
 
 #### Signature Required
