--- a/apps/documentation/pages/users/profile.mdx
+++ b/apps/documentation/pages/users/profile.mdx
@@ -1,5 +1,5 @@
 ---
-title: User Profile
+title: Public Profile
 description: Learn how to set up your public profile on Documenso.
 ---
 
@@ -15,7 +15,7 @@ Documenso allows you to create a public profile to share your templates for anyo
 
 ### Navigate to Your Profile Settings
 
-Click on your profile picture in the top right corner and select "User settings". Then, navigate to the "Public Profile" tab to configure your profile.
+Click on your profile picture in the top right corner and select "Settings" or "Team Settings". Then, navigate to the "Public Profile" tab to configure your profile.
 
 ![The profile settings page](/public-profile/documenso-public-profile-settings.webp)
 
@@ -44,6 +44,8 @@ Uploading a profile picture is optional, but we recommend it to make your profil
 You can choose to make your profile public or private. Only you can access it if you make it private. If you make it public, anyone with the link can access it.
 
 To make your profile public, toggle the switch to the right ("Show") at the top right-hand side of the page.
+
+![An example of a enabling a public profile on Documenso](/public-profile/documenso-enable-public-profile-settings.webp)
 
 ### (Optional) Link Templates
 
